--- a/RENATO_EXAM_1EVA/app/src/main/res/layout/activity_spinner.xml
+++ b/RENATO_EXAM_1EVA/app/src/main/res/layout/activity_spinner.xml
@@ -1,22 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="#FFC107"
+    android:orientation="vertical"
     android:padding="10dp">
 
     <Spinner
+        android:id="@+id/spinner"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:elevation="20dp"
-        android:id="@+id/spinner"/>
+        android:elevation="20dp" />
 
     <ListView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:id="@+id/listview_spinner"
-        />
-
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
 
 </LinearLayout>
