--- a/REPASO/app/src/main/res/layout/activity_second.xml
+++ b/REPASO/app/src/main/res/layout/activity_second.xml
@@ -5,17 +5,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".MainActivity"
-    android:gravity="center"
-    >
+    tools:context=".SecondActivity">
 
-
-    <Button
-        android:layout_width="wrap_content"
+    <Spinner
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="pasar de pantalla"
-        android:id="@+id/boton_pasar_pantalla"/>
-
-
+        android:id="@+id/spinner"
+        />
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/list_view"
+        />
 
 </LinearLayout>
