--- a/EntregaProyectos/app/src/main/res/layout/activity_main.xml
+++ b/EntregaProyectos/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,260 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:weightSum="6"
     tools:context=".MainActivity">
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:id="@+id/txt_pantalla"
+        android:gravity="center|right"
+
+        android:textColor="@color/white"
+        android:textStyle="bold"
+        android:textSize="30sp"
+        android:background="@color/black"
+        />
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:weightSum="4">
+
+        <Button
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="fill_parent"
+            android:text="AC"
+            android:layout_margin="5dp"
+            android:textSize="30dp"
+            android:id="@+id/btn_ac"
+            android:onClick="botonClick"
+            android:backgroundTint="@color/cardview_shadow_start_color"
+            />
+        <Button
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="fill_parent"
+            android:text="+/-"
+            android:layout_margin="5dp"
+            android:textSize="30dp"
+            android:id="@+id/btn_negativo"
+            android:onClick="botonClick"
+            android:backgroundTint="@color/cardview_shadow_start_color"/>
+        <Button
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="fill_parent"
+            android:text="^"
+            android:layout_margin="5dp"
+            android:textSize="30dp"
+            android:id="@+id/btn_elevado"
+            android:onClick="botonClick"
+            android:backgroundTint="@color/cardview_shadow_start_color"/>/>
+        <Button
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="fill_parent"
+            android:text="/"
+            android:layout_margin="5dp"
+            android:textSize="30dp"
+            android:id="@+id/btn_dividir"
+            android:onClick="botonClick"
+            android:backgroundTint="@color/cardview_shadow_start_color"/>/>
+
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:weightSum="4">
+
+        <Button
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="fill_parent"
+            android:text="7"
+            android:layout_margin="5dp"
+            android:textSize="30dp"
+            android:id="@+id/btn_siete"
+            android:onClick="botonClick"/>
+        <Button
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="fill_parent"
+            android:text="8"
+            android:layout_margin="5dp"
+            android:textSize="30dp"
+            android:id="@+id/btn_ocho"
+            android:onClick="botonClick"/>
+        <Button
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="fill_parent"
+            android:text="9"
+            android:layout_margin="5dp"
+            android:textSize="30dp"
+            android:id="@+id/btn_nueve"
+            android:onClick="botonClick"/>
+        <Button
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="fill_parent"
+            android:text="x"
+            android:layout_margin="5dp"
+            android:textSize="30dp"
+            android:id="@+id/btn_multiplicar"
+            android:onClick="botonClick"
+            android:backgroundTint="@color/cardview_shadow_start_color"/>/>
+
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:weightSum="4">
+
+        <Button
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="fill_parent"
+            android:text="4"
+            android:layout_margin="5dp"
+            android:textSize="30dp"
+            android:id="@+id/btn_cuatro"
+            android:onClick="botonClick"/>
+        <Button
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="fill_parent"
+            android:text="5"
+            android:layout_margin="5dp"
+            android:textSize="30dp"
+            android:id="@+id/btn_cinco"
+            android:onClick="botonClick"/>
+        <Button
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="fill_parent"
+            android:text="6"
+            android:layout_margin="5dp"
+            android:textSize="30dp"
+            android:id="@+id/btn_seis"
+            android:onClick="botonClick"/>
+        <Button
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="fill_parent"
+            android:text="-"
+            android:layout_margin="5dp"
+            android:textSize="30dp"
+            android:id="@+id/btn_restar"
+            android:onClick="botonClick"
+            android:backgroundTint="@color/cardview_shadow_start_color"/>/>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:weightSum="4">
+
+        <Button
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="fill_parent"
+            android:text="1"
+            android:layout_margin="5dp"
+            android:textSize="30dp"
+            android:id="@+id/btn_uno"
+            android:onClick="botonClick"/>
+        <Button
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="fill_parent"
+            android:text="2"
+            android:layout_margin="5dp"
+            android:textSize="30dp"
+            android:id="@+id/btn_dos"
+            android:onClick="botonClick"/>
+        <Button
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="fill_parent"
+            android:text="3"
+            android:layout_margin="5dp"
+            android:textSize="30dp"
+            android:id="@+id/btn_tres"
+            android:onClick="botonClick"/>
+        <Button
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="fill_parent"
+            android:text="+"
+            android:layout_margin="5dp"
+            android:textSize="30dp"
+            android:id="@+id/btn_suma"
+            android:onClick="botonClick"
+            android:backgroundTint="@color/cardview_shadow_start_color"/>/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:weightSum="4">
+
+        <Button
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="fill_parent"
+            android:text="0"
+            android:layout_margin="5dp"
+            android:textSize="30dp"
+            android:id="@+id/btn_cero"
+            android:onClick="botonClick"/>
+        <Button
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="fill_parent"
+            android:text="."
+            android:layout_margin="5dp"
+            android:textSize="30dp"
+            android:id="@+id/btn_punto"
+            android:onClick="botonClick"/>
+        <Button
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="fill_parent"
+            android:text="C"
+            android:layout_margin="5dp"
+            android:textSize="30dp"
+            android:id="@+id/btn_borrar"
+            android:onClick="botonClick"/>
+        <Button
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="fill_parent"
+            android:text="="
+            android:layout_margin="5dp"
+            android:textSize="30dp"
+            android:id="@+id/btn_igual"
+            android:onClick="botonClick"
+            android:backgroundTint="@color/cardview_shadow_start_color"/>/>
+
+    </LinearLayout>
+
+    //he creado un LinearLayout con 4 botones dentro y lo he duplicado,
+    //el color es definido con backgroundTint
+    //he puesto los ID y directamente he puesto la accion desde la
+    //interfaz.
+
 
 
 
