--- a/PeticionesJSON/app/src/main/res/layout/item_fila.xml
+++ b/PeticionesJSON/app/src/main/res/layout/item_fila.xml
@@ -1,43 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     android:orientation="horizontal"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:padding="20dp"
     android:id="@+id/fila_item"
     >
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
     <ImageView
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:id="@+id/imagen_item"
-       />
+        android:src="@drawable/escudo_place"
+        />
 
-        <LinearLayout
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        >
+
+        <TextView
             android:layout_width="match_parent"
-            android:layout_height="150dp"
-            android:orientation="horizontal">
+            android:layout_height="0dp"
+            android:layout_weight="0.5"
+            android:id="@+id/nombre_item"
+            android:gravity="center"
+            android:text="NOMBRE"
+            />
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="75dp"
-                android:gravity="center"
-                android:id="@+id/nombre_item"
-                android:text="nombre"
-                />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="75dp"
-                android:gravity="center"
-                android:id="@+id/estadio_item"
-                android:text="estadio"
-                />
-
-
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="0.5"
+            android:id="@+id/estadio_item"
+            android:gravity="center"
+            android:text="ESTADIO"
+            />
     </LinearLayout>
-    </LinearLayout>
+
 </LinearLayout>
