--- a/MasterDetails/app/src/main/res/layout/fragment_master.xml
+++ b/MasterDetails/app/src/main/res/layout/fragment_master.xml
@@ -4,10 +4,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/lista_master"/>
+        android:id="@+id/lista_master"
+        />
 
 </LinearLayout>
