--- a/TRABAJOREPASOFINAL/app/src/main/res/layout/header_nav.xml
+++ b/TRABAJOREPASOFINAL/app/src/main/res/layout/header_nav.xml
@@ -12,7 +12,7 @@
         />
 
     <View
-        android:layout_width="100dp"
+        android:layout_width="200dp"
         android:layout_height="100dp"
         android:background="@color/white"
         android:layout_gravity="center"
@@ -21,7 +21,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="B"
+        android:text="HEADER"
         android:textSize="50dp"
         android:textStyle="bold"
         android:layout_gravity="center"
@@ -36,6 +36,5 @@
         android:layout_gravity="bottom"
         android:id="@+id/spinner_header_nav"
         />
-
 
 </FrameLayout>
